plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	mavenCentral()
	maven {
		name = "Ladysnake Libs"
		url = "https://maven.ladysnake.org/releases"
	}
	maven {
		name = "Xander Maven"
		url = "https://maven.isxander.dev/releases"
	}
	maven {
		name = "Jared's maven"
		url = "https://maven.blamejared.com/"
	}
	maven {
		name = "TerraformersMC"
		url = "https://maven.terraformersmc.com/releases/"
	}
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"portablestorage" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

	runs {
        client {
            client()
            setConfigName("Fabric Client")
            ideConfigGenerated(true)
            runDir("run")
            
            // 完整的玩家配置
            property 'fabric.developer.uuid', '0a5e4ff0-6099-36b5-b64d-a84ffa9f1f72'
            property 'fabric.developer.name', 'DevPlayer'
            programArgs '--username', 'DevPlayer'
            programArgs '--uuid', '0a5e4ff0-6099-36b5-b64d-a84ffa9f1f72'
		}
	}

}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	// Cardinal Components API
	implementation "org.ladysnake.cardinal-components-api:cardinal-components-base:${project.cca_version}"
	implementation "org.ladysnake.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
	implementation "org.ladysnake.cardinal-components-api:cardinal-components-scoreboard:${project.cca_version}"
	include "org.ladysnake.cardinal-components-api:cardinal-components-base:${project.cca_version}"
	include "org.ladysnake.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
	include "org.ladysnake.cardinal-components-api:cardinal-components-scoreboard:${project.cca_version}"

	// Night Config (TOML)
	implementation "com.electronwill.night-config:toml:${project.night_config_version}"
	include "com.electronwill.night-config:toml:${project.night_config_version}"
	include "com.electronwill.night-config:core:${project.night_config_version}"

	// Yet Another Config Lib
	implementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
	
	// JPinyin for Pinyin search (supports polyphones)
	implementation "com.github.stuxuhai:jpinyin:${project.jpinyin_version}"
	include "com.github.stuxuhai:jpinyin:${project.jpinyin_version}"

	// Just Enough Items (JEI)
	compileOnly "mezz.jei:jei-${project.minecraft_version}-fabric-api:${project.jei_version}"
	// modRuntimeOnly "mezz.jei:jei-${project.minecraft_version}-fabric:${project.jei_version}"

	// Mod Menu (compile-only for config screen API)
	compileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}